--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,3 +42,36 @@ body {
     height: 0;
   }
 }
+
+@layer utilities {
+  .writing-tb {
+    writing-mode: tb;
+  }
+  .clip-radius{
+    clip-path: path('M0,0.5V90h89.5C40.1,90,0,49.9,0,0.5z');
+  }
+}
+
+.slick-slider .slick-dots {  
+  position: static;
+  li {
+    width: auto;
+
+    button {
+      background-color: #fff;
+      height: 3px;
+      width: 3px;
+      border-radius: 5px;
+      transition: all .3s linear;
+
+      &::before {
+        display: none;
+      }
+    }
+
+    &.slick-active button {
+      background-color: #fe1940;
+      width: 25px;
+    }
+  }
+}
