--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,8 +9,15 @@
 
 @font-face {
   font-family: 'iranyekan';
-  src: url('/fonts/iranyekan/iranyekanregular.woff') format('woff');
+  src: url('/fonts/iranyekan/iranyekanlight.woff') format('woff');
   font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'iranyekan';
+  src: url('/fonts/iranyekan/iranyekanregular.woff') format('woff');
+  font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
@@ -18,7 +25,7 @@
 @font-face {
   font-family: 'iranyekan';
   src: url('/fonts/iranyekan/iranyekanmedium.woff') format('woff');
-  font-weight: 600;
+  font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
