--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,6 +30,32 @@
   font-display: swap;
 }
 
+
+@font-face {
+  font-family: 'vazir';
+  src: url('/fonts/vazir/Vazir-FD.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'vazir';
+  src: url('/fonts/vazir/Vazir-Medium-FD.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'vazir';
+  src: url('/fonts/vazir/Vazir-Bold-FD.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
