fix bug in mobiscroll date picker confirm button color

--- a/styles/mobiscroll.scss
+++ b/styles/mobiscroll.scss
@@ -210,19 +210,19 @@ body .mbsc-popup-wrapper{
     font-family: "iranyekan" ;
     font-size: 14px;
     width: 100px;
-  }
-  button.mbsc-popup-button.mbsc-popup-button-bottom.mbsc-rtl.mbsc-hb.mbsc-popup-button-primary {
-    background: #a93aff;
-    color: #fff;
-    border-radius: 50px;
-    padding: 4px 25px;
-    margin: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-weight: normal;
-    font-family: "iranyekan" ;
-    font-size: 14px;
-    width: calc(100% - 115px);
+    &+ .mbsc-button{
+      background: #a93aff !important;
+      color: #fff !important;
+      border-radius: 50px;
+      padding: 4px 25px;
+      margin: 0;
+      margin-top: 0;
+      margin-bottom: 0;
+      font-weight: normal;
+      font-family: "iranyekan" ;
+      font-size: 14px;
+      width: calc(100% - 115px);
+    }
   }
   .mbsc-ios.mbsc-popup-buttons-bottom, .mbsc-ios.mbsc-popup-buttons-top {
     background: #192a39;
