--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -262,5 +262,8 @@ body {
   }
 }
 .touch-action-none{
-  touch-action: none
+  touch-action: none;
+  -webkit-touch-callout: none;   /* جلوگیری از منوی کپی iOS */
+  -webkit-user-select: none;     /* جلوگیری از انتخاب متن در iOS */
+  user-select: none;
 }
