--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -253,3 +253,32 @@ body {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.inserted-content {
+  li{
+    list-style-position: inside;
+    list-style-type: disc;
+    margin-bottom: 5px;
+    font-size: .875rem;
+  }
+  p{
+    margin-bottom: 13px;
+    font-size: .875rem;
+    text-align: justify;
+  }
+  h3{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 12px;
+  }
+  h4{
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 12px;
+  }
+  img{
+    width: 100%;
+    margin: 15px 0;
+    display: block;
+  }
+}
