add page brand --- add products list sort and filter --- add product detail variants data

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -104,6 +104,7 @@ body {
     transform: rotate(-360deg);
   }
 }
+
 @layer utilities {
 
   .ltr{
@@ -158,6 +159,10 @@ body {
 
   .h-highlight{
     height: calc(100svh - 90px);
+  }
+
+  .bg-gradient-green{
+    @apply bg-gradient-to-t from-[#028d7e] to-[#99feac];
   }
   
 }
