--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -290,3 +290,6 @@ body {
 .max-h-95-screen{
   max-height: 95vh;
 }
+.safePadding-b{
+  padding-bottom: calc(10px + env(safe-area-inset-bottom));
+}
