--- a/styles/rmdp.scss
+++ b/styles/rmdp.scss
@@ -21,4 +21,44 @@ body {
             padding: 0;
         }
     }
+    .rmdp-wrapper{
+        margin: 20px auto 0;
+        border: 0 none;
+    }
+    .rmdp-header {
+        margin-bottom: 10px;
+        button.rmdp-arrow-container {
+            background-color: transparent;
+            box-shadow: none;
+            border: 0 none;
+            outline: none;
+            .rmdp-arrow {
+                width: 11px;
+                height: 11px;
+                margin: 5px 0 0;
+                border-color: #a93aff;
+            }
+        }
+    }
+    .rmdp-day.rmdp-today {
+        span {
+            background: transparent;
+        }
+        &:not(.rmdp-range-hover):not(.rmdp-range):not(.end) {
+            span {
+                color: #a93aff;
+            }
+        }
+    }
+    .rmdp-range{
+        box-shadow: none;
+    }
+    .rmdp-day:not(.rmdp-disabled,.rmdp-day-hidden) span:hover{
+        background-color: transparent;
+        color: inherit;
+    }
+    .rmdp-week, .rmdp-ym{
+        gap: 1px;
+        margin-top: 1px;
+    }
 }
