feat:add showAlert and added data

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -309,3 +309,10 @@ body {
     }
   }
 }
+
+.text-gradient-logo-linear {
+  background: linear-gradient(90deg, #FE4968, #FF9B90);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+}
