--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -167,30 +167,6 @@ body {
   
 }
 
-.slick-slider .slick-dots {  
-  position: static;
-  li {
-    width: auto;
-
-    button {
-      background-color: #fff;
-      height: 3px;
-      width: 3px;
-      border-radius: 5px;
-      transition: all .3s linear;
-
-      &::before {
-        display: none;
-      }
-    }
-
-    &.slick-active button {
-      background-color: #fe1940;
-      width: 25px;
-    }
-  }
-}
-
 .otp-pin{
   justify-content: center;
   gap: 5px;
@@ -294,21 +270,17 @@ body {
   padding-bottom: calc(10px + env(safe-area-inset-bottom));
 }
 
-.similar-products-carousel{
-  .slick-list{
-    max-height: 280px;
-  }
-  .slick-dots{
-    position: absolute;
-    bottom: 100%;
-    left: 15px;
-    width: auto;
-    margin-bottom: 18px;
-    li{
-      margin: 0 4px;
-    }
-  }
-}
 .search-result-max-h{
   max-height: calc(100vh - 220px);
+}
+
+.embla {
+  overflow: hidden;
+}
+.embla__container {
+  display: flex;
+}
+.embla__slide {
+  flex: 0 0 100%;
+  min-width: 0;
 }
