edit layout min-height based on having fixed header or fixed footer

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -156,6 +156,12 @@ body {
   .min-h-screen-nav{
     min-height: calc(100vh - 80px);
   }
+  .min-h-screen-nav-header{
+    min-height: calc(100vh - 164px);
+  }
+  .min-h-screen-header{
+     min-height: calc(100vh - 84px);
+  }
 
   .h-highlight{
     height: calc(100svh - 90px);
