set dark mode styles for blogs list and bloh detail and products list filter

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -134,6 +134,13 @@ body {
       height: 0;
     }
   }
+
+  .headerShadow{
+    box-shadow: 0 2px 5px #8b8b8b30;
+  }
+  .no-box-shadow {
+    box-shadow: none;
+  }
   
   .styled-scrollbar {
     &::-webkit-scrollbar {
